@@ -8278,7 +8278,7 @@ for infinite loops.
 The same as
 .BR whence\ \-v .
 .TP
-\(dg\(dd \f3typeset\fP \*(OK \f3\(+-ACHSbflmnprstux\^\fP \*(CK \*(OK \f3\(+-EFLRXZi\*(OK\f2n\^\fP\*(CK \*(CK   \*(OK \f3\+-M  \*(OK \f2mapname\fP \*(CK \*(CK \*(OK \f3\-T  \*(OK \f2tname\fP=(\f2assign_list\fP) \*(CK \*(CK \*(OK \f3\-h \f2str\fP \*(CK \*(OK \f3\-a\fP \*(OK\f2type\fP\*(CK \*(CK \*(OK \f2vname\^\fP\*(OK\f3=\fP\f2value\^\fP \*(CK \^ \*(CK .\|.\|.
+\(dg\(dd \f3typeset\fP \*(OK \f3\(+-ACHSbflmnprstux\^\fP \*(CK \*(OK \f3\(+-EFLRXZi\*(OK\f2n\^\fP\*(CK \*(CK   \*(OK \f3\+-M  \*(OK \f2mapname\fP \*(CK \*(CK \*(OK \f3\-T  \*(OK \f2tname\fP=(\f2assign_list\fP) \*(CK \*(CK \*(OK \f3\-h \f2str\fP \*(CK \*(OK \f3\-a\fP \*(OK \f2\*(OKtype\*(CK\fP \*(CK \*(CK \*(OK \f2vname\^\fP\*(OK\f3=\fP\f2value\^\fP \*(CK \^ \*(CK .\|.\|.
 Sets attributes and values for shell variables and functions.
 When invoked inside a function defined with the
 .B function
@@ -8313,14 +8313,17 @@ Otherwise, the empty compound value is assigned to
 .B \-a
 Declares
 .I vname\^
-to be an indexed array.
-If
+to be an indexed array. This is the default.
+Subscripts are numerical and start at 0.
+To make it possible to use alphanumeric enumeration constants of a given type
+as subscripts, an option value of the form \f3\*(OK\fP\f2type\fP\f3\*(CK\fP
+can be specified (including the surrounding square brackets), which should be
+quoted to avoid pathname expansion), where
 .I type\^
-is specified, it must be the name of an enumeration
+must be the name of an enumeration
 type created with the
 .B enum
-command and it allows enumeration constants to be used
-as subscripts.
+command.
 .TP
 .B \-E
 Declares
